tests/negative/neg_pr113_tuple_field_oob.safe
package Neg_PR113_Tuple_Field_Oob
   Pair : (Boolean, Integer) = (True, 1);
   Value : Integer = Pair.3;

